--- a/Rdmp.UI.Tests/Rdmp.UI.Tests.csproj
+++ b/Rdmp.UI.Tests/Rdmp.UI.Tests.csproj
@@ -10,6 +10,7 @@
 		<NoWarn>$(NoWarn);NU1701;SYSLIB0011</NoWarn>
 		<GenerateResourceWarnOnBinaryFormatterUse>false</GenerateResourceWarnOnBinaryFormatterUse>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <IsTestProject Condition="'$([System.Runtime.InteropServices.RuntimeInformation]::IsOSPlatform($([System.Runtime.InteropServices.OSPlatform]::Windows)))' == 'false'">true</IsTestProject>
     </PropertyGroup>
     <ItemGroup>
         <Compile Include="..\SharedAssemblyInfo.cs" Link="SharedAssemblyInfo.cs" />
